--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,26 @@
-@import 'antd/dist/antd.css';
+@import "antd/dist/antd.css";
 
-.root {
-  height: 100vh;
+/* BASE ELEMENTS */
+h1 {
+  font-size:  30px;
 }
 
+.root {
+  min-height: 100vh;
+  height: 100%;
+}
+.title {
+  color: white;
+}
+
+/* HEADER */
+
 .header {
+  z-index: 1;
+  width: 100%;
+  height: 75px;
   background-color: #48484a;
+  position: fixed;
 }
 .search {
   width: 25%;
@@ -22,7 +37,10 @@
   border-color: #e96e50 !important;
 }
 
+/* CONTENT */
+
 .content {
+  margin-top: 75px;
   background-color: white;
 }
 .loading {
@@ -76,12 +94,16 @@
   justify-content: end;
 }
 .selectedCity {
+  padding: 10px;
   border: 1px solid black;
 }
 .selectedGraph {
+  padding: 10px;
   border: 1px solid black;
 }
 
+/* FOOTER */
+
 .footer {
-  background-color: #f2f2f2;
+  background-color: #48484a;
 }
